--- a/pom.xml
+++ b/pom.xml
@@ -170,10 +170,6 @@
             <url>https://repo.inventivetalent.org/content/groups/public/</url>
         </repository>
         <repository>
-            <id>luck-repo</id>
-            <url>https://ci.lucko.me/plugin/repository/everything/</url>
-        </repository>
-        <repository>
             <id>aikar</id>
             <url>https://repo.aikar.co/content/groups/aikar/</url>
         </repository>
@@ -192,7 +188,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.14-pre5-SNAPSHOT</version>
+            <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <!-- BungeeCord API -->
@@ -217,6 +213,13 @@
             <version>1.16-R0.5-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <!-- BungeeCord config -->
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-config</artifactId>
+            <version>1.16-R0.4-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- Sponge API -->
         <dependency>
             <groupId>org.spongepowered</groupId>
@@ -230,13 +233,6 @@
             <artifactId>velocity-api</artifactId>
             <version>1.0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
-        <!-- BungeeCord config -->
-        <dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-config</artifactId>
-            <version>1.13-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <!-- Mojang Auth Library (needed for SkinsGUI) -->
         <dependency>
