Add config option to change list of allowed URLs for custom skins. If AllowedUrls does not exist in the configuration file, it will use the default values.
Note that there's a one-word difference in the locale between this and 13.x (I think it is clearer this way but 13.8.8 is already released, so whatever).

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -109,6 +109,18 @@ Updater:
 # Stop the process of setting a skin if the LoginEvent was canceled by an AntiBot plugin.
 NoSkinIfLoginCanceled: true
 
+# List of allowed direct image hosting URLs to be used in /skin set <url>
+# Note that it cannot be empty (otherwise it will use the default values) nor be an '*' (asterisk).
+AllowedUrls:
+  - https://i.imgur.com
+  - http://i.imgur.com
+  - https://storage.googleapis.com
+  - http://storage.googleapis.com
+  - https://cdn.discordapp.com
+  - http://cdn.discordapp.com
+  - https://textures.minecraft.net
+  - http://textures.minecraft.net
+
   #################
   # Compatibility #
   #################
