Update bStats to version 2.1.0 (possibly fixing some conflicts too). Updating bStats seems to have fixed conflicts with PokeBattleCauses and CommandUtils, for Sponge (and possibly other plugins by the same author).
Note: bStats is now on Maven Central so we don't need to declare a
repository for it anymore.

--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,6 @@
             <url>https://libraries.minecraft.net</url>
         </repository>
         <repository>
-            <id>bstats-repo</id>
-            <url>https://repo.codemc.org/repository/maven-public</url>
-        </repository>
-        <repository>
             <id>inventive-repo</id>
             <url>https://repo.inventivetalent.org/content/groups/public/</url>
         </repository>
@@ -122,21 +118,21 @@
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
-            <version>1.7</version>
+            <version>2.1.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- bStats Lite for BungeeCord -->
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bungeecord</artifactId>
-            <version>1.7</version>
+            <version>2.1.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- bStats Lite for Sponge -->
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-sponge</artifactId>
-            <version>1.7</version>
+            <version>2.1.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- Spiget Updater for Bukkit -->
@@ -233,12 +229,8 @@
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <relocations>
                         <relocation>
-                            <pattern>org.bstats.bukkit</pattern>
-                            <shadedPattern>skinsrestorer.shared.utils.metrics.bukkit</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>org.bstats.bungeecord</pattern>
-                            <shadedPattern>skinsrestorer.shared.utils.metrics.bungeecord</shadedPattern>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>skinsrestorer.shared.utils.metrics</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>org.inventivetalent</pattern>
