--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -111,7 +111,7 @@ NoSkinIfLoginCanceled: true
 
 # When enabled, Only websites from the list below is allowed to be set using /skin url <url>
 RestrictSkinUrls:
-  Enables: false
+  Enabled: false
   List:
   - https://i.imgur.com
   - http://i.imgur.com
