--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -55,14 +55,29 @@ DisabledSkins:
     - "Steve"
     - "Owner"
 
-# Custom list for the /skins GUI.
-# ShowOnlyCustomGUI will only show CustomGUI.Names in the gui.
-CustomGUI:
-  Enabled: false
-  ShowOnlyCustomGUI: true
-  Names:
-    - "xknat"
-    - "McLive"
+# GUI settings
+SKINSGUI:
+  # is the /skins command even enabled? Default: true
+  Enabled: true
+    # If the GUI menu (/skins) is disabled, should the command still be registred
+    # and instead print a message to the player's chat? Default: false
+    RegisterGUICommand: false
+    # If the Gui.DisabledGuiMessage.Enabled is true, what should be the message that is printed?
+    Message: "SkinsRestorer /skins menu is currently disabled"
+    # Exclude urlskins from the skins gui
+  ExcludeUrlSkins: false
+  # Change the amount of displayed skulls in gui
+  # must be between [7 - 36]
+  SkullAmount: 36
+  # Custom list for the /skins GUI.
+  Custom:
+    Enabled: false
+    # If Gui.Custom.ShowOnlyCustom is true, the /skins GUI will only
+    # show skins from players listed in the Gui.Custom.Names
+    ShowOnlyCustomGUI: true
+    Names:
+      - "xknat"
+      - "McLive"
 
   ############
   # Advanced #
