Renamed SKIN_AUTO_UPDATES to DISABLE_AUTO_UPDATE_SKIN
timestamp 0 will also ignore auto updater

In the future we might make timestamp 0 disable /skin update to mark it as a custom skin.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -73,9 +73,6 @@ CustomGUI:
 # with "skinsrestorer.ownskin" you can set your own playername skin.
 PerSkinPermissions: false
 
-# Allows automatic skin updates to be disabled.
-SkinAutoUpdates: true
-
 # Time that skins are stored in the database before we request again (in minutes).
 SkinExpiresAfter: 15
 
@@ -103,6 +100,10 @@ MySQL:
 # <!! Warning !!>
 # Enabling this will stop SkinsRestorer to change skins on join.
 DisableOnJoinSkins: false
+
+# <!! Warning !!>
+# Enable this will require players to run "/skin update" to update their skin.
+DisableAutoUpdateSkin: true
 
 # Updater Settings
 Updater:
