Fix for Bedrock users connecting through Floodgate & DisableAutoUpdateSkin (#395)
* SkinStorage updated to work for Bedrock users connecting through
Floodgate.

* SkinAutoUpdates

Added config.yml SkinAutoUpdates option.

* Renamed SKIN_AUTO_UPDATES to DISABLE_AUTO_UPDATE_SKIN

timestamp 0 will also ignore auto updater

In the future we might make timestamp 0 disable /skin update to mark it as a custom skin.

* Update SkinStorage.java

Co-authored-by: slamdunx <slamdunx@users.noreply.github.com>
Co-authored-by: xknat <kevin.natte@gmail.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -101,6 +101,10 @@ MySQL:
 # Enabling this will stop SkinsRestorer to change skins on join.
 DisableOnJoinSkins: false
 
+# <!! Warning !!>
+# Enable this will require players to run "/skin update" to update their skin.
+DisableAutoUpdateSkin: true
+
 # Updater Settings
 Updater:
   # To block all types of automatic updates (which can risk keeping a exploit)
