Revert back to ViaVersion 3.2.0 in pom

--- a/pom.xml
+++ b/pom.xml
@@ -326,14 +326,14 @@
         <dependency>
             <groupId>nl.matsv</groupId>
             <artifactId>viabackwards-core</artifactId>
-            <version>3.3.0-21w06a</version>
+            <version>3.2.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- ViaVersion -->
         <dependency>
             <groupId>us.myles</groupId>
             <artifactId>viaversion</artifactId>
-            <version>3.3.0-21w08a-gradle</version>
+            <version>3.2.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- GUI backwards support -->
