--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com</groupId>
     <artifactId>skinsrestorer</artifactId>
-    <version>13.8.9-SNAPSHOT</version>
+    <version>13.8.9</version>
     <packaging>jar</packaging>
 
     <name>SkinsRestorer</name>
