Change dev to version 14.1.0-SNAPSHOT

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 #################################
 #    SkinsRestorer Config.yml   #
-#      Generated on 14.0.0      #
+#  Generated on 14.1.0-snapshot #
 #################################
 #
 # We from SRTeam thank you for using our plugin!
