--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
+                <configuration>
+                    <excludePackageNames>
+                        li.cock.ie.access,
+                        li.cock.ie.reflect
+                    </excludePackageNames>
+                    <source>8</source>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
