--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,44 @@
         <connection>scm:git:https://github.com/SkinsRestorer/SkinsRestorerX</connection>
     </scm>
 
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <excludePackageNames>
+                        net.pistonmaster.pistonmotd.bukkit:
+                        net.pistonmaster.pistonmotd.bungee:
+                        net.pistonmaster.pistonmotd.utils:
+                        net.pistonmaster.pistonmotd.sponge:
+                        net.pistonmaster.pistonmotd.velocity:
+                        net.pistonmaster.pistonmotd.data
+                    </excludePackageNames>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>dependencies</report>
+                            <report>team</report>
+                            <report>ci-management</report>
+                            <report>issue-management</report>
+                            <report>plugins</report>
+                            <report>plugin-management</report>
+                            <report>licenses</report>
+                            <report>help</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
+
     <build>
         <finalName>${project.name}</finalName>
         <plugins>
@@ -150,6 +188,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-site-plugin</artifactId>
+                <!--suppress MavenModelInspection -->
+                <version>3.9.1</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.1.1</version>
             </plugin>
         </plugins>
         <resources>
