Change DEV version to 14.1.0-SNAPSHOT (again)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
-#################################
-#    SkinsRestorer Config.yml   #
-#      Generated on 14.0.2      #
-#################################
+#####################################
+#    SkinsRestorer Config.yml       #
+#      Generated on 14.1.0-SNAPSHOT #
+#####################################
 #
 # We from SRTeam thank you for using our plugin!
 # For more information        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/
