--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -32,6 +32,17 @@ SkinWithoutPerm: true
 SkinChangeCooldown: 30
 SkinErrorCooldown: 5
 
+# Basic settings for /skins command.
+SkinsGUI:
+  #here you can disable the usage of /skins gui
+  Enabled: true
+  # If the GUI menu (/skins) is disabled, should the command still be registred
+  # and instead print a message to the player's chat? Default: false
+  RegisterGUICommand: false
+  # If the SKINSGUI.DisabledGuiMessage.Enabled is true, what should be the message that is printed?
+  DisableMessage: "SkinsRestorer /skins menu is currently disabled"
+
+
   #################
   # Customization #
   #################
@@ -56,14 +67,15 @@ DisabledSkins:
     - "Steve"
     - "Owner"
 
-# Custom list for the /skins GUI.
-# ShowOnlyCustomGUI will only show CustomGUI.Names in the gui.
-CustomGUI:
+# Custom list of skins for /skins (gui).
+CustomSkinsGUI:
   Enabled: false
-  ShowOnlyCustomGUI: true
   Names:
     - "xknat"
     - "McLive"
+  # If ShowOnlyCustom is true, the /skins GUI will only show above Names.
+  # if false, we put the Names in front of all other skins.
+  ShowOnlyCustomNames: true
 
   ############
   # Advanced #
@@ -113,6 +125,15 @@ RestrictSkinUrls:
   - http://cdn.discordapp.com
   - https://textures.minecraft.net
   - http://textures.minecraft.net
+
+SkinsGUILayout:
+  # Exclude urlskins from the skins gui
+  ExcludeUrlSkins: false
+  # Change the amount of displayed skulls in gui
+  # must be between [7 - 36]
+  SkullAmount: 36
+  # set the maximum amount of pages
+  MaxPages: 100
 
   #################
   # Compatibility #
