--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.skinsrestorer</groupId>
     <artifactId>skinsrestorer</artifactId>
-    <version>14.1.0-SNAPSHOT</version>
+    <version>14.1.0</version>
     <packaging>jar</packaging>
 
     <name>SkinsRestorer</name>
