Add maven version to config.yml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 #####################################
 #    SkinsRestorer Config.yml       #
-#      Generated on 14.1.0-SNAPSHOT #
+#      Generated on ${project.version} #
 #####################################
 #
 # We from SRTeam thank you for using our plugin!
