rename Locale "help_player" & UseOldSkinHelp to avoid confusion.
Players do need to update to the new Locale but is backwards compatible on config (gives warning)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -42,7 +42,7 @@ SkinErrorCooldown: 5
 
 # True will  make use of the 'HELP_PLAYER' & `SR_LINE` in messages.yml.
 # This is more customizable, but at the cost of permission specific help.
-UseOldSkinHelp: false
+EnableCustomHelp: false
 
 #Ignore messages.yml 'PREFIX ='
 DisablePrefix: false
