Rename DisableAutoUpdateSkin to DisallowAutoUpdateSkin because i made a default value mistake ;_;
This will fix #596 (skin update issue)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -161,7 +161,7 @@ DisableOnJoinSkins: false
 
 # <!! Warning !!>
 # Enable this will require players to run "/skin update" to update their skin.
-DisableAutoUpdateSkin: true
+DisallowAutoUpdateSkin: false
 
 # Updater Settings
 Updater:
